--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,6 @@
   	<module>practice02</module>
   	<module>chapter03</module>
   	<module>practice03</module>
+  	<module>pracitce04</module>
   </modules>
 </project>
