--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,6 @@
   	<module>chapter03</module>
   	<module>practice03</module>
   	<module>pracitce04</module>
+  	<module>practice5</module>
   </modules>
 </project>
